@@ -23,6 +23,7 @@ Version 1.9.14+svn:
      
  * Whiteboard:
    * Fixed bug #19221 : Assert when a whiteboard move-attack wins a scenario
+   * Fixed bug #19142 : attacks can be simulated between units (for which this shouldn't be possible)
 
 
 Version 1.9.14:
