@@ -39,6 +39,7 @@ Version 1.9.14+svn:
    * Disable wml menu items in linger mode without debug mode (bug #16262)
  * Whiteboard:
    * Fixed bug #19221 : Assert when a whiteboard move-attack wins a scenario
+   * Fixed bug #19142 : attacks can be simulated between units (for which this shouldn't be possible)
  * Miscellaneous and bug fixes:
    * Fixed wmlindent writing CRLF end of lines on windows
    * Fix tutorial units without xp bar
